RESOLVED FIXED68889
[Qt][WK2] API fixes for QML, the signal parameters needs to be named.
https://bugs.webkit.org/show_bug.cgi?id=68889
Summary [Qt][WK2] API fixes for QML, the signal parameters needs to be named.
Alexis Menard (darktears)
Reported 2011-09-27 04:29:45 PDT
[Qt][WK2] API fixes for QML, the parameters needs to be named.
Attachments
Patch (2.24 KB, patch)
2011-09-27 04:32 PDT, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2011-09-27 04:32:53 PDT
WebKit Review Bot
Comment 2 2011-09-27 05:57:09 PDT
Comment on attachment 108823 [details] Patch Clearing flags on attachment: 108823 Committed r96101: <http://trac.webkit.org/changeset/96101>
WebKit Review Bot
Comment 3 2011-09-27 05:57:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.