[Qt][WK2] API fixes for QML, the signal parameters needs to be named. https://bugs.webkit.org/show_bug.cgi?id=68889

Reviewed by Andreas Kling.

Signal parameters needs to be explicitly named in QML to be accessible.
This patch fix this problem.

* UIProcess/API/qt/qdesktopwebview.h:
* UIProcess/API/qt/qtouchwebpage.h:


Canonical link: https://commits.webkit.org/84872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96101 268f45cc-cd09-0410-ab3c-d52691b4dbfc